# feature-assignment

./: BUILD  CMakeLists.txt  README.md  action.h  event_queue.h  feature.h  feature_maintainer.h  id_maintainer.cpp  id_maintainer.h  run_all_tests.sh  state.h  state_test.cpp  test_list.sh  types.h
binary/: BUILD  CMakeLists.txt  get_test_info.cpp  run_solution.cpp  run_solution_on_all.cpp
core/: BUILD  binary.h  feature.h
hashcode_tests/: BUILD
sol/: BUILD  CMakeLists.txt  action_producer_interface.h  first_take_action_producer.cpp  first_take_action_producer.h  ordered_feature_implementation_producer.cpp  ordered_feature_implementation_producer.h  producer_based_solver.cpp  producer_based_solver.h  solution.cpp  solution.h  solver_interface.h
state/: BUILD  CMakeLists.txt  action.cpp  action.h  binary_maintainer.h  feature_maintainer.cpp  feature_maintainer.h  id_maintainer.cpp  id_maintainer.h  problem_data.cpp  problem_data.h  run_solution.cpp  state.cpp  state.h
tests/: BUILD  CMakeLists.txt  binary_maintainer_test.cpp  feature_maintainer_test.cpp  producer_based_solver_test.cpp  state_test.cpp
